# NaukriAutoApply

./: .env.example  README.md  excel_handler.py  gemini_helper.py  logger_config.py  naukri_automation.py  naukri_jobs.xlsx  pyproject.toml  requirements.txt  run_automation.bat  run_automation.sh  utils.py
src/: config.py  db_utils.py  excel_handler.py  gemini_helper.py  logger_config.py  main.py  naukri_automation.py  utils.py
src/naukri_auto_apply/: __init__.py  automation.py  excel_handler.py  gemini_helper.py  logger_config.py  utils.py
