[project]
name = "naukriautoapply"
version = "0.1.0"
description = "Automate job applications on Naukri.com with AI-powered form filling"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Amit Yadav", email = "amityadav4664@gmail.com"}
]
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/CraftyPythonDeveloper/NaukriAutoApply"
dependencies = [
    "google-generativeai>=0.8.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "selenium>=4.35.0",
    "webdriver-manager>=4.0.2",
]
